--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,9 @@ jobs:
     runs-on: ubuntu-latest
     env:
       BUNDLE_BUILD__TORCH___RB: "--with-torch-dir=/home/runner/libtorch"
-      LIBTORCH_VERSION: 2.0.0
+      LIBTORCH_VERSION: 2.1.2
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - uses: actions/cache@v3
         with:
           path: ~/libtorch
@@ -22,12 +22,12 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install sox libsox-dev libsox-fmt-all
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.2
+          ruby-version: 3.3
           bundler-cache: true
       - uses: actions/cache@v3
         with:
           path: ~/data
-          key: data-v1
+          key: data
       - run: mkdir -p ~/data
       - run: bundle exec rake compile -- --with-torch-dir=$HOME/libtorch
       - run: bundle exec rake test
