--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       BUNDLE_BUILD__TORCH___RB: "--with-torch-dir=/home/runner/libtorch"
-      LIBTORCH_VERSION: 2.9.0
+      LIBTORCH_VERSION: 2.9.1
     steps:
       - uses: actions/checkout@v5
       - uses: actions/cache@v5
@@ -22,7 +22,7 @@ jobs:
       - run: sudo apt-get update && sudo apt-get install sox libsox-dev libsox-fmt-all
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.4
+          ruby-version: "4.0"
           bundler-cache: true
       - uses: actions/cache@v5
         with:
