--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       BUNDLE_BUILD__TORCH___RB: "--with-torch-dir=/home/runner/libtorch"
-      LIBTORCH_VERSION: 2.9.1
+      LIBTORCH_VERSION: 2.10.0
     steps:
       - uses: actions/checkout@v5
       - uses: actions/cache@v5
@@ -31,3 +31,7 @@ jobs:
       - run: mkdir -p ~/data
       - run: bundle exec rake compile -- --with-torch-dir=$HOME/libtorch
       - run: bundle exec rake test
+
+      - run: |
+          sudo apt-get update && sudo apt-get install valgrind
+          bundle exec rake test:valgrind
