--- a/examples/Gemfile
+++ b/examples/Gemfile
@@ -4,4 +4,4 @@ gemspec path: ".."
 
 gem "fiddle"
 gem "matplotlib"
-gem "torchcodec", github: "ankane/torchcodec-ruby"
+gem "torchcodec", ">= 0.1.1"
